--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ stages:
   - echo "python version" && python --version
   - python -m pip install --upgrade pip
   - pip install .[dev]
+  - export AWS_ACCESS_KEY_ID=abcdef && export AWS_SECRET_ACCESS_KEY=super-secret-key
   - coverage run --source=src -m unittest discover -v -s tests
   - coverage report -m | grep TOTAL
 
@@ -45,6 +46,8 @@ stages:
   - echo "python version"; python --version
   - python -m pip install --upgrade pip
   - pip install .[dev]
+  - "[System.Environment]::SetEnvironmentVariable('AWS_ACCESS_KEY_ID', 'abcdef')"
+  - "[System.Environment]::SetEnvironmentVariable('AWS_SECRET_ACCESS_KEY', 'super-secret-key')"
   - coverage run --source=src -m unittest discover -v -s tests
   - coverage xml
   - coverage report -m | Select-String "TOTAL"
