--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@
 
 stages:
   - test
+  - end2end
   - publish
   - release     
 
@@ -172,6 +173,28 @@ test-linux-py38:                                                      # name of 
 # ------------------------- end jobs --------------------------- #
 
 ### ------------------------------------- END TEST JOBS ------------------------------------------------- ###
+
+
+### -------------------------------------------- END TO END TESTING ------------------------------------------------ ###
+
+# send real emails using command line tool
+end2end:                                                                                     
+  stage: end2end                                                                              
+  image: python:3.10-buster                                                                  
+  tags:
+    - shared-linux                                                                            # use runner with this tag
+  rules:
+    - if: $CI_COMMIT_BRANCH == "dev"  
+      when: on_success                                                                        
+
+  script:
+    - pip install .
+    - export AWS_ACCESS_KEY_ID=${SES_ACCESS_KEY_ID}
+    - export AWS_SECRET_ACCESS_KEY = ${SES_SECRET_KEY}                                                                  
+    - send-test --to ${TO_ADDR} --fromaddr ${FROM_ADDR} #--awsregion ${SES_REGION}
+    - send-email --to ${TO_ADDR} --fromaddr ${FROM_ADDR} --awsregion ${SES_REGION} --fromname 'py-basic-ses-tester' --subject 'test subject' --message_txt 'plain email text' --message_html '<h1>py-basic-ses test</h1><p>test email html message</p>'
+
+### ------------------------------------------- END END TO END TESTING ---------------------------------------------- ###
 
 
 
