--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,10 +82,38 @@ test-win-py310:                                                        # name of
         path: coverage.xml
 
 
+test-linux-py311:                                                      # name of the job
+  stage: test                                                         # the stage the job belongs to
+  image: python:3.11-alpine3.18                                     # use this docker image to run the job
+  tags:
+    - shared-linux                                                    # use runner with this tag
+  rules:
+    - if: $CI_COMMIT_TAG                                              # If a tag is set, it's because the release was just created, we don't need to run this job again
+      when: never
+      
+    - if: $CI_PIPELINE_SOURCE == "push"                               # Execute this job if the pipeline is initiated by a push. This will include post merge commits.
+      changes: *changes                                               # Execute this job only if the files we care about have changed
+      when: on_success                                                # Execute job if jobs from previous stage are successful. In this case always and on_success will 
+                                                                      # yield the same result, because this job is part of the first stage.
+    - if: $CI_COMMIT_BRANCH == "dev" || $CI_COMMIT_BRANCH == "main"   # Execute this job if the commit target branch is dev or main. This includes pushes from users and post merge commits
+      changes: *changes                                               # Execute the job if any of the files we care about were changed as defined above.
+      when: on_success                                                # Execute job if jobs from previous stage are successful.
+                                                                      # Added this if to make sure that these jobs run when a pipeline is manually run from the UI
+
+    - when: never                                                     # If not criteria were matched, do not run this job
+  
+  script: *script-linux                                               # run the scripted defined as an anchor above
+  coverage: '/^TOTAL.*\s+(\d+\%)$/'                                   # regex for capturing test coverage percentage
+  artifacts:                                                          # publish report to gitlab for enhanced features during merge request review
+    reports:
+      coverage_report:
+        coverage_format: cobertura
+        path: coverage.xml
+
 # test job for python 3.10 running on linux
 test-linux-py310:                                                      # name of the job
   stage: test                                                         # the stage the job belongs to
-  image: python:3.10-slim-bullseye                                     # use this docker image to run the job
+  image: python:3.10-slim-bookworm                                     # use this docker image to run the job
   tags:
     - shared-linux                                                    # use runner with this tag
   rules:
@@ -144,7 +172,7 @@ test-linux-py39:                                                      # name of 
 # test job for python 3.8 running on linux
 test-linux-py38:                                                      # name of the job
   stage: test                                                         # the stage the job belongs to
-  image: python:3.8-slim-bullseye                                     # use this docker image to run the job
+  image: python:3.8-alpine3.18                                     # use this docker image to run the job
   tags:
     - shared-linux                                                    # use runner with this tag
   rules:
@@ -180,7 +208,7 @@ test-linux-py38:                                                      # name of 
 # send real emails using command line tool
 end2end:                                                                                     
   stage: end2end                                                                              
-  image: python:3.10-buster                                                                  
+  image: python:3.11-buster                                                                  
   tags:
     - shared-linux                                                                            # use runner with this tag
   rules:
