added security scans to .gitlab-ci.yml - run sec scan

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@
 
 stages:
   - test
+  - sec-scan
   - end2end
   - publish
   - release     
@@ -88,6 +89,9 @@ test-linux-py311:                                                      # name of
   tags:
     - shared-linux                                                    # use runner with this tag
   rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: on_success
+
     - if: $CI_COMMIT_TAG                                              # If a tag is set, it's because the release was just created, we don't need to run this job again
       when: never
       
@@ -117,6 +121,9 @@ test-linux-py310:                                                      # name of
   tags:
     - shared-linux                                                    # use runner with this tag
   rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: on_success
+
     - if: $CI_COMMIT_TAG                                              # If a tag is set, it's because the release was just created, we don't need to run this job again
       when: never
       
@@ -146,6 +153,9 @@ test-linux-py39:                                                      # name of 
   tags:
     - shared-linux                                                    # use runner with this tag
   rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: on_success
+
     - if: $CI_COMMIT_TAG                                              # If a tag is set, it's because the release was just created, we don't need to run this job again
       when: never
       
@@ -176,6 +186,9 @@ test-linux-py38:                                                      # name of 
   tags:
     - shared-linux                                                    # use runner with this tag
   rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: on_success
+
     - if: $CI_COMMIT_TAG                                              # If a tag is set, it's because the release was just created, we don't need to run this job again
       when: never
 
@@ -203,6 +216,131 @@ test-linux-py38:                                                      # name of 
 ### ------------------------------------- END TEST JOBS ------------------------------------------------- ###
 
 
+### ------------------------------------ SECURITY SCANS --------------------------------------- ###
+
+# ------------------ SAST SCAN ----------------- #
+variables:
+  # Setting this variable will affect all Security templates
+  # (SAST, Dependency Scanning, ...)
+  SECURE_ANALYZERS_PREFIX: "$CI_TEMPLATE_REGISTRY_HOST/security-products"
+  SAST_IMAGE_SUFFIX: ""
+
+  SAST_EXCLUDED_ANALYZERS: ""
+  SAST_EXCLUDED_PATHS: "spec, test, tests, tmp"
+  SCAN_KUBERNETES_MANIFESTS: "false"
+
+sast:
+  stage: sec-scan
+  artifacts:
+    reports:
+      sast: gl-sast-report.json
+  rules:
+    - when: never
+  variables:
+    SEARCH_MAX_DEPTH: 4
+  script:
+    - echo "$CI_JOB_NAME is used for configuration only, and its script should not be executed"
+    - exit 1
+
+.sast-analyzer:
+  extends: sast
+  allow_failure: false
+  # `rules` must be overridden explicitly by each child job
+  # see https://gitlab.com/gitlab-org/gitlab/-/issues/218444
+  script:
+    - /analyzer run
+    - |
+        echo "---- checking log ----";
+        test_critical=$(cat gl-sast-report.json | { grep -c "\"severity\"\:\"Critical\"" || true; });
+        echo "--- test critical ---"
+        echo $test_critical
+
+        if [[ "$test_critical" == 0 ]]; 
+          then echo "no critical vulnerabilities found";
+          else echo "critical vulnerabilities found in report" && 
+            echo " ------ gl-sast-report.json ---------" &&
+            cat gl-sast-report.json && 
+            exit 1;
+        fi;
+
+semgrep-sast:
+  extends: .sast-analyzer
+  image:
+    name: "$SAST_ANALYZER_IMAGE"
+  variables:
+    SEARCH_MAX_DEPTH: 20
+    SAST_ANALYZER_IMAGE_TAG: 4
+    SAST_ANALYZER_IMAGE: "$SECURE_ANALYZERS_PREFIX/semgrep:$SAST_ANALYZER_IMAGE_TAG$SAST_IMAGE_SUFFIX"
+  rules:
+    - if: $SAST_DISABLED == 'true' || $SAST_DISABLED == '1'
+      when: never
+
+    - if: $SAST_EXCLUDED_ANALYZERS =~ /semgrep/
+      when: never
+
+    - if: $CI_COMMIT_MESSAGE =~ /(run sec scan)/ 
+      when: on_success
+
+    - if: $CI_COMMIT_BRANCH == "dev" || $CI_COMMIT_BRANCH == "main"
+      when: on_success 
+
+      exists:
+        - '**/*.py'
+        - '**/*.js'
+        - '**/*.jsx'
+        - '**/*.ts'
+        - '**/*.tsx'
+        - '**/*.c'
+        - '**/*.go'
+        - '**/*.java'
+        - '**/*.cs'
+        - '**/*.html'
+        - '**/*.scala'
+        - '**/*.sc'
+
+
+# ------------------ DEPENDENCY SCAN ----------------- #
+
+# test job for snyk dependency scan
+test-sec-snyk:                                                      
+  stage: sec-scan                                                
+  image: python:3.11-slim-bullseye                               
+  tags:
+    - shared-linux                                                 
+  rules:
+    - if: $CI_COMMIT_BRANCH == "dev" || $CI_COMMIT_BRANCH == "main"                                         
+      when: on_success      
+
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: on_success
+
+    - if: $CI_COMMIT_MESSAGE =~ /(run sec scan)/
+      when: on_success                                
+                                                        
+  script:
+    - echo "STARTING DEPENDENCY SCANS"
+    - ls -lah
+    - echo "python version" && python --version
+    - python -m pip install --upgrade pip
+    - apt update
+    - apt upgrade -y
+    - apt install curl -y
+    - curl https://static.snyk.io/cli/latest/snyk-linux -o snyk
+    - chmod +x ./snyk
+    - mv ./snyk /usr/local/bin/
+    - snyk auth ${SNYK_TOKEN}
+    - pip install .
+    - snyk test --file=setup.py --severity-threshold=high                                          
+
+
+# ------------------ END OF DEPENDENCY SCAN ----------------- #
+
+### ----------------------- END OF SECURITY TESTS--------------------- ###
+
+
+
+
+
 ### -------------------------------------------- END TO END TESTING ------------------------------------------------ ###
 
 # send real emails using command line tool
@@ -212,6 +350,9 @@ end2end:
   tags:
     - shared-linux                                                                            # use runner with this tag
   rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"                                                     # Don't run if the pipeline is triggered by a schedule
+      when: never
+
     - if: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "main"               # Execute this job if the merge target branch is main and if the files we care about have changes                                           
       when: on_success                                                        
 
