--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,6 +63,9 @@ test-win-py310:                                                        # name of
   tags:
     - shared-win                                                      # use runner with this tag
   rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+      
     - if: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "dev"               # Execute this job if the merge target branch is dev and if the files we care about have changes
       changes: *changes                                               
       when: on_success                                                # Execute job if jobs from previous stage are successful. In this case always and on_success will 
