--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -358,8 +358,8 @@ dep-sec-test-snyk:
     - ls -lah
     - echo "python version" && python --version
     - python -m pip install --upgrade pip
-    - ls -l /bin/sh
-    - dpkg --verify
+    - rm /bin/sh
+    - ln -s /bin/bash /bin/sh
     - apt update
     - apt upgrade -y
     - apt install curl -y
